<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#d3d7d4"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main_group_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_charactor_layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_menu_list"
            android:layout_width="107dp"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_menu_btn_gray"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:text="@string/menu_btn_list"
            android:textColor="#efefef"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_menu_expensedetail"
            android:layout_width="107dp"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_menu_btn_gray"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:text="@string/menu_btn_expensedetail"
            android:textColor="#efefef"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_menu_user"
            android:layout_width="106dp"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_menu_btn_gray"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:text="@string/menu_btn_user"
            android:textColor="#efefef"
            android:textSize="13sp" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_img_layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="107dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/menu_btn_list"
            android:src="@drawable/ic_list_selected" />

        <ImageView
            android:layout_width="107dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/menu_btn_expensedetail"
            android:src="@drawable/ic_detailexpense" />

        <ImageView
            android:layout_width="106dp"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/menu_btn_user"
            android:src="@drawable/ic_members_bak" />
        
    </LinearLayout>

</RelativeLayout>